# you

./: LICENSE  README.md  brain.md  index.js  main.py  package.json  pyproject.toml  requirements.txt
govbid/: __init__.py  cli.py
govbid/config/: __init__.py  settings.py
govbid/coverage/: __init__.py  gate.py  loader.py
govbid/dossier/: __init__.py  builder.py  validator.py
govbid/output/: __init__.py  render_markdown.py
govbid/policy_packs/: __init__.py  loader.py
govbid/policy_packs/govbid_default/: __init__.py  pack.json
govbid/schemas/: GovBid_Coverage_Bundle_v2.0.0.json  GovBid_DOSSIER_Template_v2.1.0.json  README.md
govbid/tests/: test_cli_smoke.py  test_coverage_gate.py  test_dossier_validation.py
govbid/util/: __init__.py  files.py  json.py
