[project]
name = "govbid-engine"
version = "0.1.0"
description = "GovBid compliance-first goods-only bid intake engine (schema-driven, gate-driven)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GovBid Innovations LLC" }]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "jsonschema>=4.21",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
govbid = "govbid.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]